tutorial laravel: set max width to avoid large image display (#124)
Actual document screenshot size is just too big...

--- a/assets/stylesheets/pgroonga.scss
+++ b/assets/stylesheets/pgroonga.scss
@@ -51,6 +51,10 @@ div.note {
   }
 }
 
+img {
+  @include img-responsive(block);
+}
+
 #myautocomplete {
   padding: 0 $padding-base-horizontal;
 }
